--- a/nemu/Kconfig
+++ b/nemu/Kconfig
@@ -127,6 +127,10 @@ endmenu
 menu "Testing and Debugging"
 
 
+config WATCHPOINT
+  bool "Enable watchpoint check after every cpu execution."
+  default 0
+
 config TRACE
   bool "Enable tracer"
   default y
