--- a/nemu/Kconfig
+++ b/nemu/Kconfig
@@ -155,6 +155,11 @@ config ITRACE_COND
   string "Only trace instructions when the condition is true"
   default "true"
 
+config IRINGBUF
+  depends on ITRACE
+  bool "Enable a ring buffer to store recent instructions."
+  default 0
+
 
 config DIFFTEST
   depends on TARGET_NATIVE_ELF
