--- a/nemu/Kconfig
+++ b/nemu/Kconfig
@@ -126,6 +126,9 @@ endmenu
 
 menu "Testing and Debugging"
 
+config BATCHMODE
+  bool "Run nemu in batch mode"
+  default 0
 
 config WATCHPOINT
   bool "Enable watchpoint check after every cpu execution."
