Feat(npc): Configuration support.

--- a/npc/Makefile
+++ b/npc/Makefile
@@ -6,7 +6,7 @@ DLCOLABSRC_DIR=$(wildcard $(NPC_HOME)/examples/njudlcolab/0*)
 YSYXPRESRC_DIR=$(wildcard $(NPC_HOME)/examples/ysyxpre/0*)
 CSRC_DIR=$(NPC_HOME)/csrc
 VSRC_DIR=$(NPC_HOME)/vsrc
-INC_PATH=$(NPC_HOME)/include
+INC_PATH=$(NPC_HOME)/include:$(NPC_HOME)/config
 CSRC=$(shell find $(CSRC_DIR) -name '*.cpp')
 VSRC=$(shell find $(VSRC_DIR) -name '*.sv')
 VERILATOR=verilator
