Perf(npc): More useful compiling & linking arguments to improve performance.

--- a/npc/Makefile
+++ b/npc/Makefile
@@ -64,9 +64,9 @@ vsrc/verible.filelist: $(VSRC)
 compile: build/bin vsrc/verible.filelist $(CSRC) $(VSRC)
 	$(call git_commit, "sim RTL") # DO NOT REMOVE THIS LINE!!!
 	@echo "New Processor Core Sim RTL."
-	$(VERILATOR) --cc --Mdir $(BUILD_DIR) --top-module $(NPC_NAME) \
+	$(VERILATOR) --cc -O3 --Mdir $(BUILD_DIR) --top-module $(NPC_NAME) \
 	    --build -Wall -Wno-DECLFILENAME -Wno-UNUSEDSIGNAL -Wno-UNUSEDPARAM -Wno-UNDRIVEN $(CSRC) $(VSRC) \
-		--trace -LDFLAGS -lreadline -LDFLAGS -lcapstone --exe -o $(BUILD_DIR)/bin/$(NPC_NAME)
+		--trace -LDFLAGS -lreadline -LDFLAGS -lcapstone -LDFLAGS -flto -CFLAGS -march=native -CFLAGS -g -CFLAGS -pipe --exe -o $(BUILD_DIR)/bin/$(NPC_NAME)
 
 sim: compile
 	$(call git_commit, "sim RTL") # DO NOT REMOVE THIS LINE!!!
