Feat: Integrate SoC source code to build process

--- a/npc-chisel/Justfile
+++ b/npc-chisel/Justfile
@@ -4,6 +4,7 @@ BUILD_DIR := "$NPC_CHISEL/out"
 INC_DIR := "$NPC_CHISEL/taohebench/include"
 CONFIG_DIR := "$NPC_CHISEL/taohebench/config"
 NVBOARD_ARCHIVE := "$NVBOARD_HOME/build/nvboard.a"
+PERIP_DIR := "$YSYX_SOC_HOME/perip"
 YSYX_HOME := "$NEMU_HOME/.."
 NPC_NAME := "TaoHe"
 
@@ -18,10 +19,14 @@ _compile:
     VSRC=`find $NPC_CHISEL -name '*.sv' | tr '\n' ' '` # we use echo command latter cause dollar var will cause error
     CSRC=`find $NPC_CHISEL -name '*.cc' | tr '\n' ' '` # we use echo command latter cause dollar var will cause error
     VLTRC=`find $NPC_CHISEL -name '*.vlt' | tr '\n' ' '` # we use echo command latter cause dollar var will cause error
+    PERIP_SRC=`find {{PERIP_DIR}} -name '*.v' | tr '\n' ' '` # we use echo command latter cause dollar var will cause error
     verilator --cc -Mdir {{BUILD_DIR}}/verilator \
     --top-module {{NPC_NAME}} \
+    --timescale 1ns/1ns --no-timing \
     --x-assign fast --x-initial fast --noassert \
-    --build -j 6 -Wall -Wno-UNUSEDSIGNAL -Wno-DECLFILENAME `echo $VLTRC` `echo $CSRC` `echo $VSRC` \
+    --build -j 6 -Wno-UNUSEDSIGNAL -Wno-DECLFILENAME \
+    `echo $VLTRC` `echo $CSRC` `echo $VSRC` `echo $PERIP_SRC` $YSYX_SOC_HOME/build/ysyxSoCFull \
+    -I{{PERIP_DIR}}/uart16550/rtl -I{{PERIP_DIR}}/spi/rtl \
     -CFLAGS -I{{BUILD_DIR}}/verilator -CFLAGS -I{{INC_DIR}} -CFLAGS -I{{CONFIG_DIR}} -CFLAGS -g \
     -LDFLAGS -lreadline -LDFLAGS -lcapstone \
     --trace --exe -o {{BUILD_DIR}}/bin/taohe
