[taohe] use fixed waveform view layout

--- a/npc-chisel/Justfile
+++ b/npc-chisel/Justfile
@@ -40,7 +40,7 @@ trace msg:
     sync
 
 wave:
-    surfer {{BUILD_DIR}}/waveform.fst
+    surfer -s WaveLayout.ron {{BUILD_DIR}}/waveform.fst
 
 fmt:
     scalafmt
