[taohe] refactor mem-test to soc-test fot futher tests

--- a/npc-chisel/.gitignore
+++ b/npc-chisel/.gitignore
@@ -3,12 +3,13 @@
 !*.sc
 !*.scala
 !*.cc
+!*.c
 !verilator.vlt
 !*.h
 !.gitignore
 !.scalafmt.conf
 !Justfile
-!taohe/test/*/*
+!Makefile
 .metals
 out
 build
